re PR c++/34917 (ICE with const vector)

PR c++/34917
	* tree.c (build_type_attribute_qual_variant): Call
	build_qualified_type if attributes are equal, but quals are not.

	* g++.dg/ext/vector12.C: New test.

From-SVN: r131726