gcc/testsuite/g++.dg/ext/vector12.C
@@ -1,0 +1,4 @@
+// PR c++/34917
+// { dg-do compile }
+
+const int i __attribute ((vector_size (8))) = {};
